Atualização do codigo, inclusão de novas paginas, implementação de varioas funcionalidades.

--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -217,16 +217,7 @@ body {
     font-size: 1.1rem;
 }
 
-/* Data */
-
-/* História */
-
-/* Local */
-
-/* Sobre */
-
 /* Pagina inicial */
-
 #home {
     width: 100%;
 }
@@ -316,13 +307,13 @@ body {
 }
 
 /* Informações Noivos */
-#noivos {
+#information {
     width: 100%;
     background-color: var(--color-primary-ligth);
     padding: 3rem 0;
 }
 
-#noivos .title-info {
+#information .title-info {
     font-size: 2.1rem;
     font-weight: 600;
     text-align: center;
@@ -619,6 +610,7 @@ body {
     text-align: justify;
 }
 
+/* Agradecimentos */
 #agradecimentos {
     width: 100%;
     background-color: var(--color-secundary-ligth);
@@ -727,17 +719,17 @@ body {
     text-align: justify;
 }
 
-.imgs-agradecimentos {
+.imgs-ajuda {
     width: 100%;
     position: relative;
     height: 125dvh;
 }
 
-.imgs-agradecimentos img {
+.imgs-ajuda img {
     width: 100%;
 }
 
-.imgs-agradecimento:nth-child(1) {
+.img-ajuda:nth-child(1) {
     background-color: var(--color-primary-ligth);
     width: 10rem;
     height: 10rem;
@@ -747,7 +739,7 @@ body {
     left: 3rem;
 }
 
-.imgs-agradecimento:nth-child(2) {
+.img-ajuda:nth-child(2) {
     width: 15rem;
     position: absolute;
     top: 14rem;
@@ -756,13 +748,45 @@ body {
     border-radius: 50%;
 }
 
-.imgs-agradecimento:nth-child(3) {
+.img-ajuda:nth-child(3) {
     width: 17rem;
     position: absolute;
     top: 35rem;
     right: 2rem;
 }
 
+.box-btn-ajuda {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2rem 0;
+}
+
+.box-btn-ajuda .btn-ajuda {
+    padding: .3rem 1rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: .5rem;
+    background-color: var(--color-primary-ligth);
+    color: var(--color-border-ligth);
+    cursor: pointer;
+}
+
+/* Data */
+
+/* História */
+
+/* Noivos */
+
+/* Local */
+
+/* Sobre */
+
+/* Butões */
+
+/* Contatos */
 #contacts {
     width: 100%;
     background-color: var(--color-secundary-ligth);
@@ -944,10 +968,47 @@ body {
 }
 
 /* Tablet */
-@media (width >= 768px) {}
+@media (width >=768px) {
+
+    /* Logotipo    */
+    .logo span {
+        width: 14rem;
+        top: -4rem;
+    }
+
+    .logotipo .logo.logo-active {
+        height: 10dvh;
+        padding-top: .5rem;
+    }
+
+    /* Icon menu */
+    .logotipo .open-menu {
+        width: 40px;
+        top: 3rem;
+        right: 3rem;
+    }
+
+    .open-menu::before,
+    .open-menu::after {
+        width: 40px;
+        height: 2px;
+        margin-top: 9px;
+    }
+
+    .open-menu.exit-menu::after {
+        transform: rotate(-135deg);
+        top: -10px;
+    }
+
+    .open-menu.exit-menu {
+        top: 4.5rem;
+        left: 12rem;
+        z-index: 5;
+    }
+}
 
 /* Notebook */
-@media (width >= 992px) {}
+@media (width >=992px) {}
 
 /* Desktop */
 @media (width > 1200px) {}
