--- a/src/frontend/css/login-register.css
+++ b/src/frontend/css/login-register.css
@@ -1,12 +1,15 @@
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Reset de estilo */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Edu AU VIC WA NT Hand", sans-serif;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
     background-color: #F6F4EB;
     display: flex;
     justify-content: center;
