--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -86,7 +86,7 @@ body {
     top: 2.5rem;
     right: 2rem;
     cursor: pointer;
-    transition: .5s;
+    transition: 1s;
 }
 
 .open-menu::before,
@@ -103,19 +103,10 @@ body {
 }
 
 .open-menu.exit-menu {
-    top: 4.5rem;
-    left: 12.5rem;
+    top: 2.5rem;
+    right: 2rem;
     border-top: transparent;
     z-index: 5;
-}
-
-.open-menu.exit-menu:hover {
-    background-color: var(--color-erro-ligth);
-    padding: 1rem 2.1rem 1rem .5rem;
-    top: 3.5rem;
-    left: 12.4rem;
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
 }
 
 .open-menu.exit-menu::before {
@@ -125,6 +116,16 @@ body {
 .open-menu.exit-menu::after {
     transform: rotate(-135deg);
     top: -8px;
+}
+
+.open-menu.exit-menu:hover::before {
+    background-color: var(--color-erro-ligth);
+    box-shadow: 0 0 1rem .3rem var(--color-erro-ligth);
+}
+
+.open-menu.exit-menu:hover::after {
+    background-color: var(--color-erro-ligth);
+    box-shadow: 0 0 1rem .3rem var(--color-erro-ligth);
 }
 
 /* Menu */
@@ -145,52 +146,48 @@ body {
 
 .menu {
     background-color: var(--color-bg-ligth);
-    margin-top: 2rem;
-    width: 0;
-    height: 93%;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    width: 100%;
+    height: 0;
     overflow: hidden;
-    transition: .6s;
+    transition: .5s ease-in-out;
 }
 
 .menu.menu-ativo {
-    width: 15rem;
+    height: 100dvh;
 }
 
 .nav-menu {
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 2rem 1rem 2rem 1rem;
+    align-items: center;
+    padding: 4rem 3rem 3rem;
 }
 
 .box-links {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    position: relative;
+    gap: 1.5rem;
+    align-items: center;
 }
 
 .nav-link {
-    width: 100%;
-    transition: .2s;
-}
-
-.nav-link:hover {
-    background-color: var(--color-primary-ligth);
-    width: 80%;
-    padding: .4rem .5rem;
-    border-top-right-radius: .5rem;
-    border-bottom-right-radius: .5rem;
+    transition: .2s ease;
 }
 
 .nav-link a {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 600;
     color: var(--color-font-ligth);
+    padding: .2rem .2rem;
+    transition: .5s;
+}
+
+.nav-link a:hover {
+    font-size: 1.75rem;
 }
 
 .box-registe {
@@ -202,19 +199,18 @@ body {
 
 .bi-box-arrow-in-right,
 .bi-person-circle {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 600;
     color: var(--color-font-ligth);
+    transition: .6s ease;
 }
 
 
 .bi-box-arrow-in-right:hover,
 .bi-person-circle:hover {
-    background-color: var(--color-primary-ligth);
     padding: .1rem .4rem;
     border-radius: .5rem;
-    transition: .3s;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
 }
 
 /* Pagina inicial */
@@ -324,10 +320,9 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 3rem;
-    padding: 3rem 0;
+    gap: 2rem;
+    padding: 4rem 0;
 }
 
 .card-info {
@@ -337,8 +332,6 @@ body {
     flex-direction: column;
     gap: 1.5rem;
     padding: 1.5rem 2rem;
-    justify-content: center;
-    align-items: center;
     text-align: center;
 }
 
@@ -448,7 +441,6 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--color-primary-ligth);
-    padding: 0 0 3rem 0;
 }
 
 .padrinhos {
@@ -458,18 +450,18 @@ body {
     align-items: center;
     gap: 2rem;
     background-color: var(--color-secundary-ligth);
-    padding: 5rem 3rem 25rem 3rem;
+    padding: 5rem 3rem 24rem 3rem;
 }
 
 .box-padrinho {
     width: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 2rem;
-    padding: 21rem 0 3rem 0;
+    position: relative;
+    top: -17rem;
+    margin-bottom: -11rem;
 }
 
 .card-padrinho {
@@ -526,11 +518,6 @@ body {
     color: var(--color-font-ligth);
 }
 
-.card-padrinho:nth-child(1) {
-    position: absolute;
-    top: -20rem;
-}
-
 #festa {
     width: 100%;
 }
@@ -566,7 +553,7 @@ body {
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
-    border: 1rem solid var(--color-primary-ligth);
+    border: 1.5rem solid var(--color-primary-ligth);
     position: absolute;
     top: 35rem;
     right: 3rem;
@@ -662,11 +649,6 @@ body {
     font-weight: 500;
     color: var(--color-border-ligth);
     text-align: justify;
-}
-
-#agradecimentos .btn-center .btn-menu {
-    background-color: var(--color-border-ligth);
-    color: var(--color-bg-ligth);
 }
 
 #ajuda-noivos {
@@ -972,17 +954,18 @@ body {
 
     /* Logotipo    */
     .logo span {
-        width: 14rem;
-        top: -4rem;
+        width: 15rem;
+        top: -4.5rem;
     }
 
     .logotipo .logo.logo-active {
-        height: 10dvh;
+        height: 13dvh;
         padding-top: .5rem;
     }
 
     /* Icon menu */
     .logotipo .open-menu {
+        border-top: 3px solid var(--color-border-ligth);
         width: 40px;
         top: 3rem;
         right: 3rem;
@@ -991,19 +974,309 @@ body {
     .open-menu::before,
     .open-menu::after {
         width: 40px;
-        height: 2px;
+        height: 3px;
         margin-top: 9px;
     }
 
     .open-menu.exit-menu::after {
         transform: rotate(-135deg);
-        top: -10px;
+        top: -12px;
     }
 
     .open-menu.exit-menu {
+        border-top: transparent;
         top: 4.5rem;
-        left: 12rem;
+        left: 20rem;
         z-index: 5;
+    }
+
+    /* Menu */
+    .menu {
+        width: 0;
+        height: 98%;
+    }
+
+    .menu.menu-ativo {
+        width: 24rem;
+    }
+
+    /* Links */
+    .nav-menu {
+        padding: 4rem .75rem 3rem;
+    }
+
+    .nav-link a {
+        font-size: 2rem;
+        font-weight: 600;
+    }
+
+    .nav-link a:hover {
+        font-size: 2.5rem;
+    }
+
+    .bi-box-arrow-in-right,
+    .bi-person-circle {
+        font-size: 1.75rem;
+        font-weight: 600;
+    }
+
+    .bi-box-arrow-in-right:hover,
+    .bi-person-circle:hover {
+        font-size: 2rem;
+    }
+
+    /* Home - imagens e text */
+    .box-imgs {
+        height: 117vh;
+    }
+
+    .img-home:nth-child(1) {
+        top: 13rem;
+        left: 2.5rem;
+        width: 20rem;
+    }
+
+    .img-home:nth-child(2) {
+        height: 0;
+        width: 0;
+    }
+
+    .img-home:nth-child(3) {
+        top: 10rem;
+        right: 2rem;
+        width: 17rem;
+    }
+
+    .img-home:nth-child(4) {
+        top: 38rem;
+        left: 4rem;
+        height: 9rem;
+        width: 9rem;
+    }
+
+    .img-home:nth-child(5) {
+        top: 32rem;
+        right: 2rem;
+        width: 15rem;
+    }
+
+    .img-home:nth-child(6) {
+        top: 45rem;
+        left: 10rem;
+        width: 30rem;
+    }
+
+    .content-home .title-home {
+        font-size: 3rem;
+        font-weight: 600;
+    }
+
+    .content-home .text-home {
+        font-size: 1.75rem;
+        font-weight: 500;
+        line-height: 3.5rem;
+        padding: 0 2rem 2rem;
+    }
+
+    /* Cards informativos */
+    .box-card-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+
+    .card-info {
+        width: 20rem;
+    }
+
+    #information .title-info {
+        font-size: 3rem;
+        font-weight: 600;
+        padding: 2rem 0;
+    }
+
+    .card-info .subtitle-info {
+        font-size: 1.9rem;
+        font-weight: 500;
+    }
+
+    .card-info .text-info {
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+
+    /* Preferencias imagens - text */
+    #preferencias {
+        padding-bottom: 15rem;
+    }
+
+    .box-pref {
+        height: 118dvh;
+    }
+
+    .img-pref:nth-child(1) {
+        top: 13rem;
+        left: 31rem;
+        width: 15rem;
+    }
+
+    .img-pref:nth-child(2) {
+        top: 6rem;
+        left: 17rem;
+        height: 8rem;
+        width: 8rem;
+    }
+
+    .img-pref:nth-child(3) {
+        top: 18rem;
+        left: 2rem;
+        width: 28rem;
+    }
+
+    .img-pref:nth-child(4) {
+        top: 47rem;
+        right: 4rem;
+        width: 25rem;
+    }
+
+    .pref-circle .img-circle {
+        width: 15rem;
+        height: 15rem;
+        top: 5rem;
+        position: absolute;
+        top: -6rem;
+        left: 26rem;
+    }
+
+    .pref {
+        width: 35rem;
+    }
+
+    .title-pref {
+        font-size: 2.5rem;
+        font-weight: 600;
+    }
+
+    .text-pref {
+        font-size: 1.75rem;
+        font-weight: 500;
+        line-height: 3.5rem;
+        padding: 0 2rem 2rem;
+    }
+
+    /* Padrinhos - text - cards */
+    .padrinhos .title {
+        font-size: 3rem;
+        font-weight: 600;
+    }
+
+    .padrinhos .text {
+        font-size: 1.75rem;
+        font-weight: 500;
+        line-height: 3.5rem;
+        padding: 0 2rem 2rem;
+    }
+
+    .box-padrinho {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: flex-start;
+    }
+
+    .card-padrinho .title {
+        font-size: 2rem;
+        font-weight: 600;
+    }
+    
+    .card-padrinho .text {
+        font-size: 1.4rem;
+        font-weight: 500;
+        line-height: 2.5rem;
+    }
+
+    /* Festa  */
+    #festa .box-festa {
+        height: 185dvh;
+    }
+
+    .imgs-festa:nth-child(1) {
+        width: 20rem;
+        top: 6rem;
+        left: 14rem;
+    }
+
+    .imgs-festa:nth-child(2) {
+        width: 13rem;
+        height: 13rem;
+        top: 25rem;
+        left: 2rem;
+    }
+
+    .imgs-festa:nth-child(3) {
+        width: 8rem;
+        height: 8rem;
+        top: 45rem;
+        left: 10rem;
+    }
+
+    .imgs-festa:nth-child(4) {
+        width: 25rem;
+        top: 30rem;
+        right: 2rem;
+    }
+
+    .imgs-festa:nth-child(5) {
+        width: 35rem;
+        top: 58rem;
+        left: 4rem;
+    }
+
+    .descricao-festa {
+        width: 35rem;
+        position: relative;
+        left: 13rem;
+        top: -24rem;
+        padding: 2rem 3rem;
+        background-color: var(--color-bg-ligth);
+        border-radius: 5rem;
+        margin-bottom: -20rem;
+    }
+
+    .descricao-festa .title {
+        font-size: 2.3rem;
+        font-weight: 600;
+    }
+
+    .descricao-festa .text {
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 3.5rem;
+    }
+
+    /* Agradecimentos */
+    .box-agradecimento {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+    }
+
+    .img-agradecimento img {
+        width: 15rem;
+        height: 55rem;
+        object-fit: cover;
+        border-radius: .5rem;
+    }
+    
+    .descricao-agradecimento .title {
+        font-size: 2rem;
+        font-weight: 600;
+    }
+    
+    .descricao-agradecimento .text {
+        font-size: 1.3rem;
+        font-weight: 500;
     }
 }
 
